add cost estimation, metrics, and precise QA scripts; update .gitignore and equilibrium notebook

--- a/equilibrium.ipynb
+++ b/equilibrium.ipynb
@@ -24,8 +24,7 @@
     "import numpy as np\n",
     "\n",
     "from desc.continuation import solve_continuation_automatic\n",
-    "from desc.equilibrium import EquilibriaFamily, Equilibrium\n",
-    "from desc.geometry import FourierRZToroidalSurface\n",
+    "from desc.equilibrium import EquilibriaFamily\n",
     "from desc.grid import LinearGrid\n",
     "\n",
     "from desc.optimize import Optimizer"
@@ -38,22 +37,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import desc.io\n",
+    "from desc.io import load\n",
     "\n",
-    "# TODO replace with input file\n",
-    "\n",
-    "surf = FourierRZToroidalSurface(\n",
-    "    R_lmn=[1, 0.125, 0.1],\n",
-    "    Z_lmn=[-0.125, -0.1],\n",
-    "    modes_R=[[0, 0], [1, 0], [0, 1]],\n",
-    "    modes_Z=[[-1, 0], [0, -1]],\n",
-    "    NFP=4,\n",
-    ")\n",
-    "\n",
-    "eq = Equilibrium(M=4, N=4, Psi=0.04, surface=surf)\n",
-    "eq0 = solve_continuation_automatic(eq, verbose=0)[-1]\n",
-    "\n",
-    "eqfam = EquilibriaFamily(eq0)"
+    "eqfam = load(\"precise_QA_output.h5\")\n",
+    "eq0 = eqfam[-1]\n",
+    "eq0 = solve_continuation_automatic(eq0, verbose=0)[-1]"
    ]
   },
   {
@@ -126,7 +114,7 @@
     "        FixBoundaryR(eq=eq, modes=R_modes),\n",
     "        FixBoundaryZ(eq=eq, modes=Z_modes),\n",
     "        FixPressure(eq=eq),\n",
-    "        FixCurrent(eq=eq),\n",
+    "        # FixCurrent(eq=eq),\n",
     "        FixPsi(eq=eq),\n",
     "    )\n",
     "    # this is the default optimizer, which re-solves the equilibrium at each step\n",
@@ -162,42 +150,6 @@
     "from desc.plotting import plot_boozer_surface\n",
     "\n",
     "plot_boozer_surface(eq0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c039af4c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "eqfam = []\n",
-    "eq_current = eq0\n",
-    "\n",
-    "for i in range(6):\n",
-    "    temp_eq = run_qh_step(i + 1, eq_current)\n",
-    "    eqfam.append(temp_eq)\n",
-    "    plot_boozer_surface(temp_eq)\n",
-    "    eq_current = temp_eq"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "833f7afd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "from desc.plotting import plot_boozer_modes, plot_boundaries\n",
-    "\n",
-    "fig, ax = plt.subplots()\n",
-    "colors = [\"r\", \"g\", \"c\", \"m\", \"b\", \"y\"]\n",
-    "\n",
-    "for i, (eq, color) in enumerate(zip(eqfam, colors)):\n",
-    "    plot_boozer_modes(\n",
-    "        eq, color=color, helicity=(1, eq.NFP), max_only=True, label=f\"Step {i}\", ax=ax\n",
-    "    )"
    ]
   }
  ],
